--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -1,11 +1,8 @@
 <div class="wrapper">
     <div class="box">
         <div class="row row-offcanvas row-offcanvas-left">
-                      
-          
-            <!-- sidebar Left-->
+            <!-- sidebar Left -->
             <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
-              
               	<ul class="nav">
                   <li><h1><%= @user.name %></h1></li>
               	</ul>
@@ -19,6 +16,13 @@
                       <h4>Tags</h4>
                       </li>
                       <section class="tag_form">
+                      <!--
+                        <ul>
+                        <%#for @user.tasks.tag do |t|%>
+                        <li> <%#=t.title %></li>
+                        <%#end%>
+                        </ul>
+                        -->
                         <%= render 'shared/tag_form' %>
                       </section>
                     <li>
@@ -105,9 +109,14 @@
                           <% if @user.tasks.any? %>
                             <h3>Tasks (<%= @user.tasks.count %>)</h3>
                             <ol class="tasks">
-                              <%= render @tasks %>
-                            </ol><br>
-                            <%= will_paginate @tasks %>
+                              <%= render @tasksA %>
+                            </ol>
+                            <br>
+                            <ol class="tasks">
+                              <%= render @tasksP %>
+                            </ol>
+                            <br>
+                            <%= will_paginate @tasksA %>
                           <% end %>
                         </div>
                         </div>
