A new search bar

--- a/blog/app/assets/stylesheets/application.css
+++ b/blog/app/assets/stylesheets/application.css
@@ -12,5 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ * require bootstrap
  *= require bootstrap.min
+ *= require jquery-ui
+*= require bootstrap-datetimepicker
  */
