--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -66,20 +66,16 @@
                       <a href="/" class="navbar-brand logo">C</a>
                   	</div>
                   	<nav class="collapse navbar-collapse" role="navigation">
-                    <form class="navbar-form navbar-left">
-                        <div class="input-group input-group-sm" style="max-width:360px;">
-                          <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-                          <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                          </div>
+                    <%= form_tag(@user, method: "get", :class => 'navbar-form navbar-left') do %>
+                      <div class="input-group input-group-sm" style="max-width:360px;">
+                        <%= text_field_tag(:q,"" ,class:'form-control', placeholder: 'Search a task...') %>
+                        <div class="input-group-btn">
+                          <%= submit_tag("",class:'btn btn-default' ) %>
                         </div>
-                    </form>
+                      </div>
+                    <% end %>
+
                     <ul class="nav navbar-nav navbar-right">
-                      <!--<li>
-                      <button type="button" class="btn btn-default" onclick="alert('Pinned...')">
-                        <span class="glyphicon glyphicon-pushpin" aria-hidden="true">Pin </span> 
-                      </button>
-                       </li> -->
                        <li>
                           <span class="btn btn-default navbar-btn">
                             <align="left"><%= link_to "Log out", logout_path, method: "delete" %>
@@ -91,7 +87,7 @@
                 <!-- /top nav -->
               
                 <div class="padding">
-                    <div class="full col-sm-10">
+                    <div class="full col-sm-12">
                       
                         <!-- content -->                      
                       	<div class="row">
@@ -107,15 +103,17 @@
 
                         <div class="col-md-8">
                           <% if @user.tasks.any? %>
-                            <h3>Tasks (<%= @user.tasks.count %>)</h3>
+                            <h3>Tasks (<%= @tasksA.count %>)</h3>
                             <ol class="tasks">
                               <%= render @tasksA %>
                             </ol>
                             <br>
+                            <%if @tasksP != nil %>
                             <ol class="tasks">
                               <%= render @tasksP %>
                             </ol>
                             <br>
+                            <%end%>
                             <%= will_paginate @tasksA %>
                           <% end %>
                         </div>
