added search bar to be reshaped

--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -50,8 +50,6 @@
             </div>
             <!-- /sidebar -->
           
-            <!-- main right col -->
-
             <div class="column col-sm-10 col-xs-11" id="main">
                 
                 <!-- top nav -->
@@ -80,12 +78,27 @@
                           <span class="btn btn-default navbar-btn">
                             <align="left"><%= link_to "Log out", logout_path, method: "delete" %>
                           </span>
+
+                          <script>
+                  (function() {
+                    var cx = '015114410747510765940:ddkdvmhun74';
+                    var gcse = document.createElement('script');
+                    gcse.type = 'text/javascript';
+                    gcse.async = true;
+                    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+                        '//cse.google.com/cse.js?cx=' + cx;
+                    var s = document.getElementsByTagName('script')[0];
+                    s.parentNode.insertBefore(gcse, s);
+                  })();
+                </script>
+                <gcse:search></gcse:search>
                        </li> 
                     </ul>
                   	</nav>                    
                 </div>
                 <!-- /top nav -->
-              
+                
+
                 <div class="padding">
                     <div class="full col-sm-12">
                       
