--- a/blog/app/assets/stylesheets/custom.css.scss
+++ b/blog/app/assets/stylesheets/custom.css.scss
@@ -36,4 +36,14 @@ aside {
 }
 .task-feed {
   border: solid-gray;
+  
+}
+
+.gravatar {
+  float: left;
+  margin-right: 40px;
+}
+
+.gravatar_edit {
+  margin-top: 65px;
 }
