--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
               	</ul>
                   <br>
 		              <ul class="nav">
-                    <%=image_tag("user.png", :class => "img-responsive")%>
+		                <%= render 'shared/prof_pic' %>
             		  </ul>
 		              <br>
                   <ul class="nav hidden-xs " id="lg-menu">
