--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
           
             <!-- main right col -->
 
-            <div class="column col-sm-9 col-xs-11" id="main">
+            <div class="column col-sm-10 col-xs-11" id="main">
                 
                 <!-- top nav -->
               	<div class="navbar navbar-blue navbar-static-top">  
@@ -93,7 +93,7 @@
   })();
 </script>
 <div class="tasks"> Suggestions
-<gcse:searchresults-only queryParameterName="q"></gcse:searchresults-only></div>
+<gcse:searchresults-only queryParameterName="r"></gcse:searchresults-only></div>
                         <!-- content -->                      
                         <%# if logged_in? %>
                           <div class="row">
@@ -118,11 +118,6 @@
                         </div>
                   </div>
               </div>
-
-              <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
-               
-              </div>
-
               </div>
               </div>
               </div>
