--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -80,20 +80,9 @@
               
                 <div class="padding">
                     <div class="full col-md-12">
-                    <script>
-  (function() {
-    var cx = '015114410747510765940:ddkdvmhun74';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<div class="tasks"> Suggestions
-<gcse:searchresults-only queryParameterName="r"></gcse:searchresults-only></div>
+
+<div id="results" style="max-height:209px;"></div>
+
                         <!-- content -->                      
                         <%# if logged_in? %>
                           <div class="row">
