--- a/blog/app/views/shared/_task_form.html.erb
+++ b/blog/app/views/shared/_task_form.html.erb
@@ -2,19 +2,33 @@
 <%= form_for(Task.new) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="panel-heading">
-  Hola
+  <h1>Create a new Task! </h1>
   </div>
   <div class="panel-body">
-  	<%= f.text_area :title, placeholder: "New task..." %>
-    <%= f.text_area :content, placeholder: "Description..." %>
+  <div class="form-group">
+    <div class="col-md-6">
+  	 <%= f.text_area :title, placeholder: "New task..." , class: 'form-control'%>
+    </div>
+    <div class="col-md-6">
+      <%= f.text_area :content, placeholder: "Description...", class: 'form-control' %>
+    </div>
+    </div>
     <br>
-    <%= f.datetime_select :due_date, :ampm => true, :order => [:day, :month, :year], :default => Time.now.beginning_of_hour().advance(:hours => 1), :discard_minute => true %>
+    <div class="form-group">
+    <%= f.datetime_select :due_date, {:ampm => true, :order => [:day, :month, :year], :default => Time.now.beginning_of_hour().advance(:hours => 1), :discard_minute => true} ,{:class=>'form-control'} %>
     <%#= f.text_field :due_date, class: "show_calendar" %>
+    </div>
     <br>
+    <div class="form-group">
+    <div class= "col-md-6">
     <strong>Priority: </strong>
-    <%= f.collection_select(:priority_id, Priority.where(:user_id => current_user.id), :id, :title) %>
+    <%= f.collection_select(:priority_id, Priority.where(:user_id => current_user.id), :id, :title,{} ,{:class=>'form-control'}) %>
+    </div>
+    <div class="col-md-6">
     <strong>Tag:</strong> 
-    <%= f.collection_select(:tag_id, Tag.where(:user_id => current_user.id), :id, :title) %>
+    <%= f.collection_select(:tag_id, Tag.where(:user_id => current_user.id), :id, :title,{}, {:class=>'form-control'}) %>
+    </div>
+    </div>
   </div>
   <div class="panel-footer">
   <%= f.submit "Post", class: "btn btn-primary" %>
