--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -32,9 +32,9 @@
 <div class="row col-md-12">
   <div class="col-md-1 "> </div>
   <div class ="col-md-10">
-	 <img src="help.jpg" class ="img-responsive" height=5%>
+	 <img src="help.jpg" class ="img-responsive" >
   </div>
-  <div class="col-md-1 "> </div>
+  <div class="col-md-1 ">Concrastinator</div>
 </div>
   <div class="col-md-12">
 	<h1 align="center">Start today, finish in time</h1>
