--- a/blog/app/views/users/edit.html.erb
+++ b/blog/app/views/users/edit.html.erb
@@ -1,29 +1,26 @@
 <% provide(:title, "Edit user") %>
-<h1>Update your profile</h1>
-
-<div class="row">
+<legend><center>Update your profile</center></legend>
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
       <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, class: 'form-control', :placeholder => "Name"%>
 
       <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.email_field :email, class: 'form-control', :placeholder => "email@domain.com" %>
 
       <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+      <%= f.password_field :password, class: 'form-control', :placeholder => "******" %>
 
       <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-
+      <%= f.password_field :password_confirmation, class: 'form-control', :placeholder => "******" %>
+      <br>
       <%= f.submit "Save changes", class: "btn btn-primary" %>
     <% end %>
 
     <div class="gravatar_edit">
       <%= gravatar_for @user %>
-      <a href="http://gravatar.com/emails" target="_blank">change</a>
+      <a href="http://gravatar.com/emails" target="_blank">Change your Gravatar picture</a>
     </div>
   </div>
-</div>
