--- a/blog/app/views/users/new.html.erb
+++ b/blog/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<legend><center>Sign Up</center></legend>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
