A new way to create a task with modals

--- a/blog/app/views/tasks/new.js.erb
+++ b/blog/app/views/tasks/new.js.erb
@@ -1,7 +1,7 @@
 // Add the dialog title
-$('#dialog h3').html("<i class=' glyphicon glyphicon-pencil'></i> Edit Task");
+$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i> Add New Task");
  
-// Render the edit form
+// Render the new form
 $('.modal-body').html('<%= j render(:partial => "update_form") %>');
  
 // Show the dynamic dialog
