--- a/blog/app/views/tasks/_update_form.html.erb
+++ b/blog/app/views/tasks/_update_form.html.erb
@@ -2,7 +2,7 @@
   <div class="panel-heading">
   </div>
   <div class="panel-body">
-   <%= form_for(@task, remote: true, "data-type" => "script") do |f| %>
+   <%= form_for(@task, remote: true) do |f| %>
   	<%= f.text_area :title %>
     <%= f.text_area :content %>
     <br>
@@ -13,7 +13,7 @@
     <%= f.collection_select(:priority_id, Priority.where(:user_id => current_user.id), :id, :title) %>
     <strong>Tag:</strong> 
     <%= f.collection_select(:tag_id, Tag.where(:user_id => current_user.id), :id, :title) %>
-    <%= f.submit "Update Task", class: "btn btn-primary" %>
+    <%= f.submit @task.new_record? ? "New Task": "Update Task", class: "btn btn-primary" %>
     <% end %>
   </div>
   <div class="panel-footer">
