--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -5,42 +5,84 @@
             <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
               	<ul class="nav">
                   <li><h1><%= @user.name %></h1></li> 
-                  <li><%= link_to "SETTINGS",edit_user_path(current_user) %></li>
               	</ul>
-                  <br>
 		              <ul class="nav">
 		                <%= render 'shared/prof_pic' %>
             		  </ul>
-		              <br>
-                  <ul class="nav hidden-xs " id="lg-menu">
+                  <div align="right"> <%= link_to "SETTINGS",edit_user_path(current_user) %> </div>
+                  <ul class="nav hidden-xs" id="lg-menu">
                     <li class="active">
+                      <!--Aqui empieza -->
+                      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                        <div class="panel panel-default">
+                          <div class="panel-heading" role="tab" id="headingTags">
+                            <h4 class="panel-title">
+                              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTags" aria-expanded="true" aria-controls="collapseTags">
+                                Tags
+                              </a>
+                            </h4>
+                          </div>
+                          <div id="collapseTags" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTags">
+                            <div class="panel-body">
+                              <% @user.tasks.group(:tag_id).each do |f| %>
+                                <%= render f.tag %>
+                              <%end%>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Aqui acaba-->
+                      
+                      <!-- 
                       <h4>Tags</h4>
                       </li>
-                      <section class="tag_show">
-                        <%@user.tasks.group(:tag_id).each do |f|%>
-                          <%= render f.tag %>
-                        <%end%>
-                      </section> 
-
-                      <section class="tag_form">
-                        <%= render 'shared/tag_form' %>
-                      </section> 
+                      <div class="col-md-12">
+                        <%# @user.tasks.group(:tag_id).each do |f| %>
+                          <%#= render f.tag %>
+                        <%#end%>
+                      </div>
+                      --> 
+                      <div class="col-md-12">
+                        <%= render 'shared/tag_form'%>
+                      </div> 
                     <li>
-                      <h4>Priorities</h4>                      
-                      <section class="priority_show">
-                        <%@user.tasks.group(:priority_id).each do |f|%>
-                          <%= render f.priority %>
-                        <%end%>
-                      </section> 
+                    <!--Aqui empieza -->
+                      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                        <div class="panel panel-default">
+                          <div class="panel-heading" role="tab" id="headingPriorities">
+                            <h4 class="panel-title">
+                              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsePriorities" aria-expanded="true" aria-controls="collapsePriorities">
+                                Priorities
+                              </a>
+                            </h4>
+                          </div>
+                          <div id="collapsePriorities" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div class="panel-body">
+                              <%@user.tasks.group(:priority_id).each do |f|%>
+                                <%= render f.priority %>
+                              <%end%>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Aqui acaba-->
+                      
+                      <!--
 
+                      <h4>Priorities</h4>
+                      <div clas="col-md-12">
+                        <%#@user.tasks.group(:priority_id).each do |f|%>
+                          <%#= render f.priority %>
+                        <%#end%>
+                      </div>
+                      --> 
                     </li>
                     <li>
-                     <section class="priority_form">
+                     <div class="col-md-12">
                         <%= render 'shared/priority_form' %>
-                      </section>
+                      </div>
                     </li>
                 </ul>
-
               </ul>
               	<!-- tiny only nav-->
                 <!--
@@ -71,9 +113,11 @@
                   	<nav class="collapse navbar-collapse" role="navigation">
                     <%= form_tag(@user, method: "get", :class => 'navbar-form navbar-left') do %>
                       <div class="input-group input-group-sm" style="max-width:360px;">
-                        <%= text_field_tag(:q,"" ,class:'form-control', placeholder: 'Search a task...') %>
+                        <%= text_field_tag(:q,"" , class:'form-control', placeholder: 'Search a task...') %>
                         <div class="input-group-btn">
-                          <%= submit_tag("",class:'btn btn-default' ) %>
+                          <%= button_tag(type:'submit', class:'btn btn-default') do %>
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"> </span>
+                          <%end%>
                         </div>
                       </div>
                     <% end %>
@@ -90,7 +134,6 @@
                 <!-- /top nav -->
               
                 <div class="padding">
-                    <div class="full col-md-12">
                         <div class="col-md-12">
                           <h3><%= link_to "+", new_task_path, remote: true,:class => 'btn btn-sm btn-info' %> <span id="tasks_amount">Tasks (<%= @tasksA.count %>) </span></h3>
                           <% if @user.tasks.any? %>
@@ -107,7 +150,6 @@
                             <%= will_paginate @tasksA %>
                           <% end %>
                         </div>
-                  </div>
               </div>
               </div>
               </div>
