Filter results is now possible

--- a/blog/app/views/tags/_tag.html.erb
+++ b/blog/app/views/tags/_tag.html.erb
@@ -1,3 +1,1 @@
-<div class="checkbox">
-  <label><input type="checkbox" value=""><%=tag.title%></label>
-</div>
+<li><%= check_box_tag 'tags[]', tag.id%> <%= tag.title %> </li>
