--- a/blog/app/views/priorities/_priority.html.erb
+++ b/blog/app/views/priorities/_priority.html.erb
@@ -1,3 +1,3 @@
 <div class="checkbox">
   <label><input type="checkbox" value=""><%=priority.title%></label>
-</div>
+<li><%= check_box_tag 'priorities[]', priority.id%> <%= priority.title %> </li>
