--- a/blog/app/views/shared/_tag_form.html.erb
+++ b/blog/app/views/shared/_tag_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(Tag.new, :html=> {class: "form-inline"}) do |f| %>
+<%= form_for(Tag.new) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
   	<%= f.text_field :title, placeholder: "New tag...",class:'form-control input-sm'%>
