A mailer with a rake file

--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -148,7 +148,7 @@
                 <br>
                         <div class="col-md-12">
                           <h3><%= link_to "+", new_task_path, remote: true,:class => 'btn btn-sm btn-info' %> <span id="tasks_amount">Tasks (<%= @tasksA.count %>) </span></h3>
-                          <% if @user.tasks.any? %>
+                          <%# if @user.tasks.any? %>
                             <ol class="tasks"id="tasks">
                               <%= render @tasksA %>
                             </ol>
@@ -160,7 +160,7 @@
                               <br>
                             <%end%>
                             <%= will_paginate @tasksA %>
-                          <% end %>
+                          <%# end %>
                         </div>
               </div>
               </div>
